# bevy_brdf

./: Cargo.toml  README.md
assets/models/: tuzi.glb
examples/: load_model.rs  main.rs
src/: lib.rs
src/custom/: custom_functions.wgsl  custom_shader.wgsl  mod.rs
src/toon/: mod.rs  toon_bindings.wgsl  toon_fragment.wgsl  toon_shader.wgsl
