[package]
name = "bevy_npr"
version = "0.1.0"
edition = "2021"
authors = ["ow666faka@qq.com"]
description = "A cartoon rendering plugin based on Bevyengine"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"

[dev-dependencies]
bevy = "0.12"
bevy_egui = "0.23.0"