[package]
name = "bevy_npr"
version = "0.1.0"
edition = "2021"
authors = ["galgamecloud@gmail.com"]
description = "A cartoon rendering plugin based on Bevyengine"

exclude = ["assets/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"

[dev-dependencies]
bevy = "0.12"
bevy_egui = "0.23.0"
bevy_editor_pls = "0.7.0"
bevy_atmosphere = "0.8.0"